--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,12 @@
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.10.6",
     "nodemon": "^3.1.9",
+    "prettier": "^3.4.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.9.5"
   }
